# hitchskeleton

./: .gitignore  PROJECT_NAME  pyproject.toml
docs/src/: index.md
hitch/: engine.py  key.py
hitch/story/: quickstart.story
hitchskeleton/: app.py  template.py
